<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/instruction"
        android:title="@string/instructions"
        app:showAsAction="never" />
    <item
        android:id="@+id/achievement"
        android:title="@string/achievement"
        app:showAsAction="never" />
    <item
        android:id="@+id/barChart"
        android:title="@string/bar_chart"
        app:showAsAction="never" />
    <item
        android:id="@+id/howToUse"
        android:title="@string/how_to_use"
        app:showAsAction="never" />
    <item
        android:id="@+id/rateApp"
        android:title="@string/rate_the_app"
        app:showAsAction="never" />

</menu>