<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/mainCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/color_app_bar"
        android:gravity="start|center"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/politics_in_the_democracy" />

    <TextView
        android:id="@+id/subCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#f4a401"
        android:drawableStart="@drawable/ic_arrow_right"
        android:gravity="start|center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainCategory"
        tools:text="@string/constitutional_institutions" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subCategory">

        <com.dot.lid.utils.CustomRatingBar
            android:id="@+id/ratingBronze"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:setImageResource="@drawable/star_with_bg"
            app:setRatingName="@string/bronze" />

        <com.dot.lid.utils.CustomRatingBar
            android:id="@+id/ratingSilver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            app:setImageResource="@drawable/star_with_bg"
            app:setRatingName="@string/silver" />

        <com.dot.lid.utils.CustomRatingBar
            android:id="@+id/ratingGold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            app:setImageResource="@drawable/star_with_bg"
            app:setRatingName="@string/gold" />

        <com.dot.lid.utils.CustomRatingBar
            android:id="@+id/ratingPlatinum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            app:setImageResource="@drawable/star_with_bg"
            app:setRatingName="@string/platinum" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>