<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/goToAppBT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="28dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/white"
                android:textSize="30sp"
                tools:text="@string/instructions" />

            <TextView
                android:id="@+id/instructionDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:text="@string/instruction_details" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/goToAppBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/no_button"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/goto_to_app" />

</androidx.constraintlayout.widget.ConstraintLayout>